--- a/classproject/001 Personal Site/styles.css
+++ b/classproject/001 Personal Site/styles.css
@@ -1,3 +1,7 @@
+/* colors */
+
+
+/* Universal Themes */
 html, body {
     height: 100%;
 }
@@ -16,7 +20,6 @@ h1 {
 
 table {
     border-collapse: collapse;
-    cellspacing: 50px;
 }
 
 thead {
