--- a/classproject/000courseCompilation/css/styles.scss
+++ b/classproject/000courseCompilation/css/styles.scss
@@ -61,7 +61,10 @@ td {
 /*   */
 
 .form-email {
-    background-color: tan;
+    background-color: white;
+    width: 500px;
+    margin: 0 auto;
+    padding: 10px;
 }
 
 
