--- a/classproject/000courseCompilation/css/styles.css
+++ b/classproject/000courseCompilation/css/styles.css
@@ -53,6 +53,9 @@ td {
 /* FORMS */
 /*   */
 .form-email {
-  background-color: tan;
+  background-color: white;
+  width: 500px;
+  margin: 0 auto;
+  padding: 10px;
 }
 /*# sourceMappingURL=styles.css.map */
