--- a/classproject/002FindYourFutureMotorcycle/css/styles.css
+++ b/classproject/002FindYourFutureMotorcycle/css/styles.css
@@ -52,14 +52,10 @@ td {
 /*   */
 /* FORMS */
 /*   */
-.form {
+.form-email {
   background-color: white;
   width: 500px;
   margin: 0 auto;
   padding: 10px;
-}
-
-option:hover {
-  background-color: red;
 }
 /*# sourceMappingURL=styles.css.map */
