--- a/classproject/000courseCompilation/css/styles.css
+++ b/classproject/000courseCompilation/css/styles.css
@@ -25,6 +25,22 @@ h1 {
 /*   */
 /* Sections General */
 /*   */
+.description {
+  background-color: #ffc7c7;
+  padding: 20px;
+  font-size: .5rem;
+}
+
+.description-item {
+  border: 2px dashed black;
+  padding: 20px;
+  margin: 5px;
+}
+
+.description-topic {
+  font-weight: bold;
+}
+
 /*   */
 /* TABLES */
 /*   */
@@ -54,7 +70,7 @@ td {
 /*   */
 .form {
   background-color: white;
-  width: 500px;
+  width: 700px;
   margin: 0 auto;
   padding: 10px;
 }
