--- a/classproject/000courseCompilation/css/styles.scss
+++ b/classproject/000courseCompilation/css/styles.scss
@@ -42,13 +42,33 @@ h1 {
     font-weight: bold;
 }
 
+.white-box {
+    background-color: white;
+    width: 700px;
+    margin: 0 auto;
+    padding: 10px;
+}
+.content {
+    padding: 5px;
+}
+
 
 /*   */
 /* TABLES */
 /*   */
+h3 {
+    text-align: center;
+    color: red;
+    font-size: 60px;
+    margin: 30px 0;
+}
 .table-general {
     border: 1px solid black;
     border-collapse: collapse;
+    margin: 0 auto;
+}
+.tables-content {
+    background-color: thistle;
 }
 td {
     border: 1px solid black;
@@ -71,22 +91,50 @@ td {
 /*   */
 /* FORMS */
 /*   */
-.form {
-    background-color: white;
-    width: 700px;
-    margin: 0 auto;
-    padding: 10px;
+.forms {
+    background-color: honeydew;
 }
-option:hover {
+// option:hover {
+//     background-color: red;
+// }
+
+
+/*   */
+/* BACON */
+/*   */
+// id selectors
+#heading {
+    color: blue;
+}
+.bacon {
+    background-color: coral;
+    h1 {
+        color: red;
+        font-size: 100px;
+    }
+    h1:hover {
+        color: green;
+    }
+}
+.bacon-content {
+}
+.bacon-white-box {
+    width: 900px;
+    margin: 0 auto;
+}
+.igood {
+    background-color: green;
+}
+.ibad {
     background-color: red;
 }
-
-//
-// EMAIL FORM
-//
-.form-email {
+.eggplant {
+    width: 150px;
+    height: auto;
 }
-//
-// SIGN UP FORM
-//
-
+.circular {
+    border-radius: 100%;
+}
+img:hover {
+    background-color: olivedrab;
+}
