--- a/classproject/003CSS-mysite/css/styles.css
+++ b/classproject/003CSS-mysite/css/styles.css
@@ -25,4 +25,10 @@ h1 {
   height: 300px;
   width: 300px;
 }
+
+.a {
+  display: inline-block;
+  width: 200px;
+  background-color: lightcyan;
+}
 /*# sourceMappingURL=styles.css.map */
