--- a/classproject/003CSS-mysite/css/styles.css
+++ b/classproject/003CSS-mysite/css/styles.css
@@ -15,15 +15,32 @@ h1 {
 }
 
 .middle-container {
+  display: inline-block;
   background-color: aquamarine;
   height: 300px;
   width: 300px;
+  position: relative;
 }
 
 .bottom-container {
+  display: inline-block;
   background-color: khaki;
   height: 300px;
   width: 300px;
+  position: relative;
+}
+
+.bottomest-container {
+  display: inline-block;
+  background-color: violet;
+  height: 300px;
+  width: 300px;
+  position: relative;
+}
+
+.bottomest-container:active {
+  position: absolute;
+  top: 200px;
 }
 
 .a {
