--- a/classproject/003CSS-mysite/css/styles.scss
+++ b/classproject/003CSS-mysite/css/styles.scss
@@ -32,17 +32,31 @@ h1 {
 // BOTTOM CONTAINERS
 //
 .middle-container {
+    display: inline-block;
     background-color: aquamarine;
     height: 300px;
     width: 300px;
+    position: relative;
 }
 
 .bottom-container {
+    display: inline-block;
     background-color: khaki;
     height: 300px;
     width: 300px;
+    position: relative;
 }
-
+.bottomest-container {
+    display: inline-block;
+    background-color: violet;
+    height: 300px;
+    width: 300px;
+    position: relative;
+}
+.bottomest-container:active {
+    position: absolute;
+    top: 200px;
+}
 .a {
     display: inline-block;
     width: 200px;
