--- a/classproject/003CSS-mysite/css/styles.css
+++ b/classproject/003CSS-mysite/css/styles.css
@@ -6,9 +6,15 @@ html, body {
 
 h1 {
   margin-top: 0;
+  font-size: 5.62rem;
 }
 
-h2, h3 {
+h2 {
+  font-family: Montserrat, sans-serif;
+  text-align: center;
+}
+
+h3 {
   font-family: Montserrat, sans-serif;
   text-align: center;
 }
@@ -22,7 +28,10 @@ h2, h3 {
 
 .name {
   font-family: Sacramento, cursive, serif;
-  font-size: 100px;
+}
+
+.intro {
+  font-size: 30px;
 }
 
 .top {
