--- a/classproject/003CSS-mysite/css/styles.scss
+++ b/classproject/003CSS-mysite/css/styles.scss
@@ -25,6 +25,7 @@ h1 {
 h2{
     font-family: Montserrat, sans-serif;
     text-align: center;
+    font-size: 2.5rem; // 40 / 16 = 2.5 (how to find rem size)
 }
 
 h3{
