--- a/classproject/003CSS-mysite/css/styles.css
+++ b/classproject/003CSS-mysite/css/styles.css
@@ -1,7 +1,19 @@
+* {
+  line-height: 2;
+}
+
 html, body {
   margin: 0;
   font-family: Merriweather, serif;
   background-color: #dfdfdf;
+}
+
+h1, h2 {
+  color: #66BFBF;
+}
+
+h3, a {
+  color: #11999E;
 }
 
 h1 {
@@ -29,10 +41,12 @@ h3 {
 
 .name {
   font-family: Sacramento, cursive, serif;
+  margin: 50px auto 0 auto;
 }
 
 .intro {
   font-size: 30px;
+  font-weight: normal;
 }
 
 .top {
