started new maintenance page for motorcycle

--- a/classproject/003CSS-mysite/css/styles.css
+++ b/classproject/003CSS-mysite/css/styles.css
@@ -96,6 +96,11 @@ h3 {
   margin-top: 100px;
 }
 
+.skill-row img {
+  height: 250px;
+  width: 250px;
+}
+
 .bottom-container {
   text-align: center;
 }
