--- a/classproject/003CSS-mysite/css/styles.scss
+++ b/classproject/003CSS-mysite/css/styles.scss
@@ -125,6 +125,10 @@ h3{
 }
 .skill-row {
     margin-top: 100px;
+    img {
+        height: 250px;
+        width: 250px;
+    }
 }
 //
 // BOTTOM CONTAINER
