--- a/classproject/003CSS-mysite/css/styles.css
+++ b/classproject/003CSS-mysite/css/styles.css
@@ -25,6 +25,7 @@ h2 {
   font-family: Montserrat, sans-serif;
   text-align: center;
   font-size: 2.5rem;
+  font-weight: normal;
 }
 
 h3 {
@@ -76,6 +77,7 @@ h3 {
 
 .middle-container {
   text-align: center;
+  width: 100%;
 }
 
 .profile {
@@ -88,20 +90,90 @@ h3 {
 }
 
 .napoleon-dancing {
-  height: 250px;
-  width: auto;
+  width: 25%;
 }
 
 .skill-row {
   margin-top: 100px;
+  width: 50%;
+  margin: 100px auto;
+}
+
+.skill-row h3 {
+  text-align: left;
+}
+
+.skill-row p {
+  text-align: left;
+  line-height: 2;
 }
 
 .skill-row img {
-  height: 250px;
-  width: 250px;
+  width: 25%;
+  border-radius: 50%;
+}
+
+.skill-row .codingimg {
+  float: left;
+  margin-right: 20px;
+}
+
+.skill-row .guitarimg {
+  float: right;
+  margin-left: 30px;
+}
+
+.skill-row .motorcycleimg {
+  float: left;
+  margin-right: 20px;
+}
+
+.main-row {
+  display: inline-block;
+}
+
+.main-row img {
+  float: none;
 }
 
 .bottom-container {
   text-align: center;
+  background-color: #66BFBF;
+  padding: 30px;
+}
+
+.contact-me {
+  margin: 20px;
+}
+
+.copyright {
+  color: #EAF6F6;
+}
+
+.BUTTON_IGK {
+  background: #66BFBF;
+  background-image: -o-linear-gradient(top, #66BFBF, #11999E);
+  background-image: -webkit-gradient(to bottom, #66BFBF, #11999E);
+  border-radius: 20px;
+  color: #EAF6F6;
+  font-family: Brush Script MT;
+  font-size: 20px;
+  font-weight: 100;
+  padding: 10px;
+  box-shadow: 1px 1px 5px 0 #11999E;
+  text-shadow: 1px 1px 5px #11999E;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+}
+
+.BUTTON_IGK:hover {
+  border: solid #11999E 1px;
+  background: #11999E;
+  background-image: -o-linear-gradient(top, #11999E, #66BFBF);
+  background-image: -webkit-gradient(to bottom, #11999E, #66BFBF);
+  border-radius: 20px;
+  text-decoration: none;
 }
 /*# sourceMappingURL=styles.css.map */
