--- a/classproject/003CSS-mysite/css/styles.scss
+++ b/classproject/003CSS-mysite/css/styles.scss
@@ -11,21 +11,24 @@
 * {
     line-height: 2;
 }
+
 html, body {
     margin: 0;
     font-family: Merriweather, serif;
     background-color: rgb(223, 223, 223);
 }
+
 // 16px = 100% = 1em (used to be the width of the capital letter 'M'.
 h1, h2 {
     color: #66BFBF;
 }
+
 h3, a {
     color: #11999E;
 }
+
 h1 {
     margin-top: 0;
-    // font-size: 562%;
     font-size: 5.62rem; // use 'rem' instead of 'em'
                         // em builds off parent font sizes
                         // rem always references the root size and is therefore far more reliable and less likely to do unexpected things.
@@ -35,6 +38,7 @@ h2{
     font-family: Montserrat, sans-serif;
     text-align: center;
     font-size: 2.5rem; // 40 / 16 = 2.5 (how to find rem size)
+    font-weight: normal;
 }
 
 h3{
@@ -84,23 +88,8 @@ h3{
     left: 25%;
 }
 // INLINE ELEMENTS ***CAN*** DISPLAY INLINE AND YOU ***CAN'T*** CHANGE THEIR DIMENTIONS
-// .i {
-//     display: inline;
-//     width: 500px;
-//     background-color: green;
-// }
 // BLOCK ELEMENTS ***CAN'T*** DISPLAY INLINE AND YOU ***CAN*** CHANGE THEIR DIMENTIONS
-// .b {
-//     display: block;
-//     width: 500px;
-//     background-color: greenyellow;
-// }
 // INLINE-BLOCK ELEMENTS ***CAN*** DISPLAY INLINE AND YOU ***CAN*** CHANGE THEIR DIMENTIONS
-// .ib {
-//     display: inline-block;
-//     width: 500px;
-//     background-color: yellow;
-// }
 
 
 //
@@ -108,6 +97,7 @@ h3{
 //
 .middle-container {
     text-align: center;
+    width: 100%;
 }
 
 .profile {
@@ -120,19 +110,95 @@ h3{
 }
 
 .napoleon-dancing {
-    height: 250px;
-    width: auto
+    width: 25%;
 }
 .skill-row {
     margin-top: 100px;
+    width: 50%;
+    margin: 100px auto;
+    h3 {
+        text-align: left;
+    }
+    p {
+        text-align: left;
+        line-height: 2;
+    }
     img {
-        height: 250px;
-        width: 250px;
+        width: 25%; // percentage of containter width (NOT 25% of picture width)
+        border-radius: 50%;
+    }
+    .codingimg {
+        float: left;
+        margin-right: 20px;
+    }
+    .guitarimg {
+        float: right;
+        margin-left: 30px;
+    }
+    .motorcycleimg {
+        float: left;
+        margin-right: 20px;
+    }
+}
+
+.main-row {
+    display: inline-block;
+    img {
+        float: none;
     }
 }
 //
 // BOTTOM CONTAINER
 //
+
 .bottom-container {
     text-align: center;
+    background-color: #66BFBF;
+    padding: 30px;
+}
+.contact-me {
+    margin: 20px;
+}
+.copyright {
+    color: #EAF6F6;
+}
+
+.BUTTON_IGK {
+   background: #66BFBF;
+   background-image: -webkit-linear-gradient(top, #66BFBF, #11999E);
+   background-image: -moz-linear-gradient(top, #66BFBF, #11999E);
+   background-image: -ms-linear-gradient(top, #66BFBF, #11999E);
+   background-image: -o-linear-gradient(top, #66BFBF, #11999E);
+   background-image: -webkit-gradient(to bottom, #66BFBF, #11999E);
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   color: #EAF6F6;
+   font-family: Brush Script MT;
+   font-size: 20px;
+   font-weight: 100;
+   padding: 10px;
+   -webkit-box-shadow: 1px 1px 5px 0 #11999E;
+   -moz-box-shadow: 1px 1px 5px 0 #11999E;
+   box-shadow: 1px 1px 5px 0 #11999E;
+   text-shadow: 1px 1px 5px #11999E;
+//    border: solid #11999E 1px;
+   text-decoration: none;
+   display: inline-block;
+   cursor: pointer;
+   text-align: center;
+}
+
+.BUTTON_IGK:hover {
+   border: solid #11999E 1px;
+   background: #11999E;
+   background-image: -webkit-linear-gradient(top, #11999E, #66BFBF);
+   background-image: -moz-linear-gradient(top, #11999E, #66BFBF);
+   background-image: -ms-linear-gradient(top, #11999E, #66BFBF);
+   background-image: -o-linear-gradient(top, #11999E, #66BFBF);
+   background-image: -webkit-gradient(to bottom, #11999E, #66BFBF);
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   text-decoration: none;
 }
