testing bootstrap grid

--- a/classproject/005tindog/TinDog-Start-master/css/styles.css
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.css
@@ -1,4 +1,16 @@
 section {
   background-color: darkgray;
 }
+
+.red {
+  background-color: red;
+}
+
+.blue {
+  background-color: yellow;
+}
+
+.border {
+  border: black 1px solid;
+}
 /*# sourceMappingURL=styles.css.map */
