--- a/classproject/005tindog/TinDog-Start-master/css/styles.scss
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.scss
@@ -1,3 +1,15 @@
 section {
     background-color: darkgray;
 }
+
+.red {
+    background-color: red;
+}
+
+.blue {
+    background-color: yellow;
+}
+
+.border {
+    border: black 1px solid;
+}
