Added a test website for testing bootstrap

--- a/classproject/000courseCompilation/css/styles.scss
+++ b/classproject/000courseCompilation/css/styles.scss
@@ -1,140 +1,3 @@
-/*   */
-/* Colors */
-/*   */
-
-
-
-/*   */
-/* Universal Styles */
-/*   */
-/* * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
-} */
-html, body {
-    height: 100%;
-}
-html {
-    background-color: #f5f1ed;
-}
-h1 {
-    color: blue;
-}
-
-
-
-/*   */
-/* Sections General */
-/*   */
-.description {
-    background-color: #ffc7c7;
-    padding: 20px;
-    font-size: .5rem;
-}
-.description-item {
-    border: 2px dashed black;
-    padding: 20px;
-    margin: 5px;
-}
-.description-topic {
-    font-weight: bold;
-}
-
-.white-box {
-    background-color: white;
-    width: 700px;
-    margin: 0 auto;
-    padding: 10px;
-}
-.content {
-    padding: 5px;
-}
-
-
-/*   */
-/* TABLES */
-/*   */
-h3 {
-    text-align: center;
-    color: red;
-    font-size: 60px;
-    margin: 30px 0;
-}
-.table-general {
-    border: 1px solid black;
-    border-collapse: collapse;
-    margin: 0 auto;
-}
-.tables-content {
-    background-color: thistle;
-}
-td {
-    border: 1px solid black;
-}
-
-.sport {
-    background-color: teal;
-}
-.dualsport {
+.cont {
     background-color: red;
-}
-.standard {
-    background-color: yellow;
-}
-
-
-
-
-
-/*   */
-/* FORMS */
-/*   */
-.forms {
-    background-color: honeydew;
-}
-// option:hover {
-//     background-color: red;
-// }
-
-
-/*   */
-/* BACON */
-/*   */
-// id selectors
-#heading {
-    color: blue;
-}
-.bacon {
-    background-color: coral;
-    h1 {
-        color: red;
-        font-size: 100px;
-    }
-    h1:hover {
-        color: green;
-    }
-}
-.bacon-content {
-}
-.bacon-white-box {
-    width: 900px;
-    margin: 0 auto;
-}
-.igood {
-    background-color: green;
-}
-.ibad {
-    background-color: red;
-}
-.eggplant {
-    width: 150px;
-    height: auto;
-}
-.circular {
-    border-radius: 100%;
-}
-img:hover {
-    background-color: olivedrab;
 }
