--- a/classproject/005tindog/TinDog-Start-master/css/styles.scss
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.scss
@@ -1,26 +1,3 @@
-// .red {
-//     background-color: red;
-// }
-
-// .blue {
-//     background-color: yellow;
-// }
-
-// .orange {
-//     background-color: orange;
-// }
-
-// .light-gray {
-//     background-color: lightgray;
-// }
-
-// .border {
-//     border: black 1px solid;
-// }
-
-//
-// GENERAL STYLES
-//
 section {
     background-color: darkgray;
     font-family: 'Ubuntu', sans-serif;
@@ -31,6 +8,9 @@ h1 {
     font-size: 3rem;
     line-height: 1.5;
     font-weight: 900;
+}
+.container-fluid {
+    padding: 3% 15%;
 }
 
 //
