--- a/classproject/005tindog/TinDog-Start-master/css/styles.css
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.css
@@ -1,20 +1,51 @@
-section {
-  background-color: darkgray;
-  font-family: 'Ubuntu', sans-serif;
+* {
+  font-family: 'Montserrat', sans-serif;
 }
 
-h1 {
-  font-family: 'Montserrat-Black', sans-serif;
-  font-size: 3rem;
-  line-height: 1.5;
-  font-weight: 900;
+section {
+  background-color: darkgray;
 }
 
 .container-fluid {
   padding: 3% 15%;
 }
 
+.navbar {
+  padding: 0 0 4.5rem;
+}
+
+.nav-item {
+  padding: 0 15px;
+}
+
+.nav-link {
+  font-size: .9rem;
+  font-weight: light;
+}
+
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: 'Ubuntu', sans-serif;
+}
+
 #title {
   background-color: #ff4c68;
+  color: whitesmoke;
+}
+
+.intro {
+  font-size: 3rem;
+  line-height: 1.5;
+  font-weight: 900;
+}
+
+.download-button {
+  margin: 5% 3% 5% 0;
+}
+
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
 }
 /*# sourceMappingURL=styles.css.map */
