--- a/classproject/005tindog/TinDog-Start-master/css/styles.scss
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.scss
@@ -1,22 +1,62 @@
+//
+// Universal Styles
+//
+
+* {
+    font-family: 'Montserrat', sans-serif;
+}
+
 section {
     background-color: darkgray;
+}
+
+.container-fluid {
+    padding: 3% 15%;
+}
+//
+// Nav Bar
+//
+
+.navbar {
+    padding: 0 0 4.5rem;
+}
+
+.nav-item {
+    padding: 0 15px;
+}
+
+.nav-link {
+    font-size: .9rem;
+    font-weight: light;
+}
+
+.navbar-brand {
+    font-size: 1.5rem;
+    font-weight: bold;
     font-family: 'Ubuntu', sans-serif;
 }
 
-h1 {
-    font-family: 'Montserrat-Black', sans-serif;
+//
+// Title Bar
+//
+
+#title {
+    background-color: #ff4c68;
+    color: whitesmoke;
+}
+
+
+.intro {
     font-size: 3rem;
     line-height: 1.5;
     font-weight: 900;
 }
-.container-fluid {
-    padding: 3% 15%;
+
+.download-button {
+    margin: 5% 3% 5% 0;
 }
 
-//
-// title bar
-//
-#title {
-    background-color: #ff4c68;
+.title-image {
+    width: 60%;
+    transform: rotate(25deg);
 }
-
