--- a/classproject/005tindog/TinDog-Start-master/css/styles.scss
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.scss
@@ -60,3 +60,31 @@ section {
     width: 60%;
     transform: rotate(25deg);
 }
+
+//
+// FEATURES
+//
+#features {
+    background-color: whitesmoke;
+}
+
+.feature {
+    padding-bottom: 30px;
+    h3 {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bold;
+        font-size: 1.5rem;
+    }
+    p {
+        color: #8f8f8f;
+    }
+}
+
+.features-icon {
+    color: #ef8172;
+    padding: 40px 0 70px 0;
+}
+
+.features-icon:hover {
+    color: #ff4c68;
+}
