--- a/classproject/005tindog/TinDog-Start-master/css/styles.scss
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.scss
@@ -13,6 +13,11 @@ section {
 .container-fluid {
     padding: 3% 15%;
 }
+
+
+
+
+
 //
 // Nav Bar
 //
@@ -87,4 +92,65 @@ section {
 
 .features-icon:hover {
     color: #ff4c68;
+}
+
+
+
+
+
+//
+// TESTIMONIALS
+//
+
+#testimonials {
+    background-color: #ef8172;
+}
+
+
+
+
+
+
+//
+// PRESS
+//
+
+#press {
+    background-color: #ff4c68;
+}
+
+
+
+
+
+
+//
+// PRICING
+//
+
+#pricing {
+    background-color: whitesmoke;
+}
+
+
+
+
+
+//
+// CALL TO ACTION
+//
+
+#cta {
+    background-color: #ef8172;
+}
+
+
+
+
+//
+// FOOTER
+//
+
+#footer {
+    background-color: #ff4c68;
 }
