--- a/classproject/005tindog/TinDog-Start-master/css/styles.css
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.css
@@ -51,10 +51,13 @@ section {
 
 #features {
   background-color: whitesmoke;
+  padding: 7% 10%;
 }
 
 .feature {
   padding-bottom: 30px;
+  padding: 0 5% 30px 5%;
+  text-align: center;
 }
 
 .feature h3 {
