--- a/classproject/005tindog/TinDog-Start-master/css/styles.scss
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.scss
@@ -71,10 +71,13 @@ section {
 //
 #features {
     background-color: whitesmoke;
+    padding: 7% 10%;
 }
 
 .feature {
     padding-bottom: 30px;
+    padding: 0 5% 30px 5%;
+    text-align: center;
     h3 {
         font-family: 'Montserrat', sans-serif;
         font-weight: bold;
