finished press section

--- a/classproject/000courseCompilation/css/styles.css
+++ b/classproject/000courseCompilation/css/styles.css
@@ -1,4 +1,9 @@
 .cont {
   background-color: red;
 }
+
+.changeable {
+  color: white;
+  background-color: black;
+}
 /*# sourceMappingURL=styles.css.map */
