--- a/classproject/005tindog/TinDog-Start-master/css/styles.css
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.css
@@ -3,11 +3,18 @@
 }
 
 section {
-  background-color: darkgray;
+  background-color: whitesmoke;
 }
 
 .container-fluid {
   padding: 3% 15%;
+}
+
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  line-height: 1.5;
+  font-size: 2.3rem;
 }
 
 .navbar {
@@ -80,11 +87,27 @@ section {
 }
 
 #testimonials {
+  padding: 7% 10%;
   background-color: #ef8172;
+  text-align: center;
+  color: #fff;
+}
+
+.testimonial-image {
+  margin: 20px;
+  width: 10%;
+  border-radius: 100%;
 }
 
 #press {
-  background-color: #ff4c68;
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
 }
 
 #pricing {
