added carousel buttons not yet working

--- a/classproject/005tindog/TinDog-Start-master/css/styles.css
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.css
@@ -99,6 +99,10 @@ h2 {
   border-radius: 100%;
 }
 
+.testi {
+  background-color: burlywood;
+}
+
 #press {
   background-color: #ef8172;
   text-align: center;
