--- a/classproject/005tindog/TinDog-Start-master/css/styles.scss
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.scss
@@ -111,12 +111,19 @@ h2 {
 // TESTIMONIALS
 //
 
-#testimonials {
-    padding: 7% 10%;
+#testimonial-carousel {
     background-color: #ef8172;
     text-align: center;
     color: #fff;
 }
+
+.carousel-inner {
+}
+
+.carousel-item {
+    padding: 7% 18%;
+}
+
 
 .testimonial-image {
     margin: 20px;
@@ -125,9 +132,7 @@ h2 {
 }
 
 .testi {
-    background-color: burlywood;
-    height: 500px;
-    // height: 300px;
+    background-color: #ef8172;
 }
 
 
@@ -136,10 +141,10 @@ h2 {
 //
 
 #press {
-    // background-color: #ff4c68;
-    background-color: #ef8172;
+    background-color: #ff4c68;
+    // background-color: #ef8172;
     text-align: center;
-    padding-bottom: 3%;
+    padding: 3% 0 1%;
 }
 
 .press-logo {
@@ -158,7 +163,14 @@ h2 {
 
 #pricing {
     background-color: whitesmoke;
+    padding: 7% 10%;
 }
+
+.pricing-header {
+    margin-top: -7%;
+    margin-bottom: 3%;
+}
+
 
 
 
