finished cards section

--- a/classproject/005tindog/TinDog-Start-master/css/styles.scss
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.scss
@@ -163,14 +163,13 @@ h2 {
 
 #pricing {
     background-color: whitesmoke;
-    padding: 7% 10%;
+    padding: 100px;
+    text-align: center;
 }
 
-.pricing-header {
-    margin-top: -7%;
-    margin-bottom: 3%;
+.pricing-column {
+    padding: 3% 2%;
 }
-
 
 
 
