--- a/classproject/005tindog/TinDog-Start-master/css/styles.scss
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.scss
@@ -6,6 +6,10 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+body {
+    background-color: whitesmoke;
+}
+
 section {
     // background-color: darkgray;
     background-color: whitesmoke;
@@ -56,6 +60,10 @@ h2 {
     color: whitesmoke;
 }
 
+.container-fluid {
+    padding: 3% 15% 7%;
+}
+
 
 .intro {
     font-size: 3rem;
@@ -70,6 +78,11 @@ h2 {
 .title-image {
     width: 60%;
     transform: rotate(25deg);
+    // must set position in order to use z-index
+    // you don't actually need to set the z-index, because you have the stacking order in the correct order.
+    position: absolute;
+    // 'right: 30%' will position the image FROM the right side
+    right: 30%;
 }
 
 //
@@ -78,6 +91,8 @@ h2 {
 #features {
     background-color: whitesmoke;
     padding: 7% 10%;
+    // must set position in order to use z-index
+    position: relative;
 }
 
 .feature {
@@ -181,6 +196,11 @@ h2 {
 
 #cta {
     background-color: #ef8172;
+    text-align: center;
+    padding-top: 3%;
+    .cta-button {
+        margin: 3% 1%;
+    }
 }
 
 
@@ -192,4 +212,39 @@ h2 {
 
 #footer {
     background-color: #ff4c68;
+    text-align: center;
+    padding: 2%;
+    p {
+        margin: 0;
+    }
+}
+
+.test-div {
+    padding: 50px;
+    background-color: antiquewhite;
+    height: 600px;
+}
+
+.test-box {
+    height: 100px;
+    width: 100px;
+    border: 1px solid;
+    position: absolute;
+}
+
+.red {
+    background-color: red;
+    z-index: 1;
+}
+
+.yellow {
+    background-color: yellow;
+    transform: translate(40px, 40px);
+}
+
+.blue {
+    background-color: blue;
+    color: white;
+    transform: translate(80px, 80px);
+    z-index: 0;
 }
