--- a/classproject/005tindog/TinDog-Start-master/css/styles.scss
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.scss
@@ -85,6 +85,19 @@ h2 {
     right: 30%;
 }
 
+@media (max-width: 1661px) {
+    .title-image {
+        position: static;
+        transform: rotate(0deg);
+        width: 100%;
+        text-align: center;
+    }
+    .button-group {
+        justify-content: center;
+    }
+
+}
+
 //
 // FEATURES
 //
@@ -95,15 +108,21 @@ h2 {
     position: relative;
 }
 
+.button-group {
+    min-width: 593px;
+}
+
 .feature {
     padding-bottom: 30px;
     padding: 0 5% 30px 5%;
     text-align: center;
+
     h3 {
         font-family: 'Montserrat', sans-serif;
         font-weight: bold;
         font-size: 1.5rem;
     }
+
     p {
         color: #8f8f8f;
     }
@@ -132,8 +151,7 @@ h2 {
     color: #fff;
 }
 
-.carousel-inner {
-}
+.carousel-inner {}
 
 .carousel-item {
     padding: 7% 18%;
@@ -198,6 +216,7 @@ h2 {
     background-color: #ef8172;
     text-align: center;
     padding-top: 3%;
+
     .cta-button {
         margin: 3% 1%;
     }
@@ -214,6 +233,7 @@ h2 {
     background-color: #ff4c68;
     text-align: center;
     padding: 2%;
+
     p {
         margin: 0;
     }
@@ -231,6 +251,7 @@ h2 {
     border: 1px solid;
     position: absolute;
 }
+
 //
 // TESTING
 //
