finished tindog site pre checkin with course

--- a/classproject/005tindog/TinDog-Start-master/css/styles.scss
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.scss
@@ -66,13 +66,19 @@ h2 {
 
 
 .intro {
-    font-size: 3rem;
+    font-size: 2rem;
     line-height: 1.5;
     font-weight: 900;
 }
 
 .download-button {
     margin: 5% 3% 5% 0;
+    font-size: 1rem;
+}
+@media (min-width: 1900px) {
+    .intro {
+        font-size: 3rem;
+    }
 }
 
 .title-image {
@@ -85,15 +91,16 @@ h2 {
     right: 30%;
 }
 
-@media (max-width: 1661px) {
+@media (max-width: 1000px) {
     .title-image {
         position: static;
         transform: rotate(0deg);
-        width: 100%;
-        text-align: center;
     }
     .button-group {
         justify-content: center;
+    }
+    #title {
+        text-align: center;
     }
 
 }
@@ -106,10 +113,6 @@ h2 {
     padding: 7% 10%;
     // must set position in order to use z-index
     position: relative;
-}
-
-.button-group {
-    min-width: 593px;
 }
 
 .feature {
@@ -213,9 +216,11 @@ h2 {
 //
 
 #cta {
-    background-color: #ef8172;
+    background-color: #ff4c68;
     text-align: center;
-    padding-top: 3%;
+    color: white;
+    padding: 10% 15%;
+    font-size: 3rem;
 
     .cta-button {
         margin: 3% 1%;
@@ -230,45 +235,15 @@ h2 {
 //
 
 #footer {
-    background-color: #ff4c68;
+    background-color: whitesmoke;
+    font-size: 60%;
     text-align: center;
-    padding: 2%;
+    padding: 5% 0;
 
     p {
         margin: 0;
     }
-}
-
-.test-div {
-    padding: 50px;
-    background-color: antiquewhite;
-    height: 600px;
-}
-
-.test-box {
-    height: 100px;
-    width: 100px;
-    border: 1px solid;
-    position: absolute;
-}
-
-//
-// TESTING
-//
-.red {
-    background-color: red;
-    z-index: 1;
-}
-
-.yellow {
-    background-color: yellow;
-    transform: translate(40px, 40px);
-    // z-index: 2;
-}
-
-.blue {
-    background-color: blue;
-    color: white;
-    transform: translate(80px, 80px);
-    z-index: 0;
+    i {
+        padding: 0 5px;
+    }
 }
