--- a/classproject/005tindog/TinDog-Start-master/css/styles.css
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.css
@@ -15,13 +15,34 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 900;
 }
 
-.intro-heading {
-  font-size: 2rem;
+.big-heading {
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.section-heading {
+  font-size: 2.3rem;
+  line-height: 1.5;
+}
+
+.pricing-card-heading {
+  font-size: 1.7rem;
   line-height: 1.5;
 }
 
 .container-fluid {
   padding: 3% 15%;
+}
+
+br {
+  line-height: 1.5;
+  margin-bottom: 1rem;
+}
+
+.navbar-brand h1 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .navbar {
@@ -35,12 +56,6 @@ h1, h2, h3, h4, h5, h6 {
 .nav-link {
   font-size: .9rem;
   font-weight: light;
-}
-
-.navbar-brand {
-  font-size: 1.5rem;
-  font-weight: bold;
-  font-family: 'Ubuntu', sans-serif;
 }
 
 #title {
@@ -155,6 +170,16 @@ h1, h2, h3, h4, h5, h6 {
   padding: 3% 2%;
 }
 
+.pricing-price {
+  font-size: 2.3rem;
+  line-height: 1.5;
+  font-weight: 900;
+}
+
+.card-body p, h3 {
+  word-wrap: keep-all;
+}
+
 #cta {
   background-color: #ff4c68;
   text-align: center;
@@ -167,7 +192,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .cta-heading {
-  font-size: 3rem;
+  font-size: 2.3rem;
   font-family: 'Montserrat', sans-serif;
   font-weight: 900;
   line-height: 1.5;
