--- a/classproject/000courseCompilation/css/styles.scss
+++ b/classproject/000courseCompilation/css/styles.scss
@@ -1,8 +1,144 @@
-.cont {
-    background-color: red;
+//
+// UNIVERSAL STYLES
+//
+
+* {
+    // padding: 0;
+    // margin: 0;
+    // font-size: 16px;
 }
 
-.changeable {
-    color: white;
-    background-color: black;
+html, body {
+    color: #233d4dff;
+    background-color:#e9e3e6ff;
 }
+
+//
+// UNIVERSAL CLASSES
+//
+.container {
+    text-align: center;
+    padding: 50px 0;
+}
+
+//
+// TITLE SECTION
+//
+
+#title {
+    background-color: #233d4dff;
+    color:#e9e3e6ff;
+}
+
+
+//
+// BIKE SELECTION SECTION
+//
+
+#bike-selection {
+}
+
+#bike-selection-title {
+    padding: 50px 0;
+}
+
+#search-input {
+    margin-bottom: 50px;
+}
+
+.bike-image {
+    display: block;
+    text-align: center;
+    width: 30rem;
+    height: auto;
+    margin: 20px auto;
+    box-shadow: grey 3px 3px;
+    margin-bottom: 73px;
+}
+
+//
+// SPECIFICATIONS SECTION
+//
+
+#specifications {
+    background-color: whitesmoke;
+}
+
+.specifications-list {
+    display: inline-block;
+    margin: 20px;
+}
+
+//
+// MAINTENANCE SCHEDULE SECTION
+//
+
+
+//
+// FOOTER SECTION
+//
+
+#footer {
+    background-color: whitesmoke;
+    width: 100%;
+    padding: 10px 0;
+    p {
+        text-align: center;
+        margin-bottom: 0;
+    }
+}
+
+
+//
+// COLORS
+//
+// /* CSS HEX */
+// --charcoal: #233d4d;
+// --red-ryb: #ff220cff;
+// --blood-red: #6b0504ff;
+// --pale-silver: #c3babaff;
+// --mikado-yellow: #ffc533ff;
+// --platinum: #e9e3e6ff;
+
+// /* CSS HSL */
+// --charcoal: hsla(203, 37%, 22%, 1);
+// --red-ryb: hsla(5, 100%, 52%, 1);
+// --blood-red: hsla(1, 93%, 22%, 1);
+// --pale-silver: hsla(0, 7%, 75%, 1);
+// --mikado-yellow: hsla(43, 100%, 60%, 1);
+// --platinum: hsla(330, 12%, 90%, 1);
+
+// /* SCSS HEX */
+// $charcoal: #233d4dff;
+// $red-ryb: #ff220cff;
+// $blood-red: #6b0504ff;
+// $pale-silver: #c3babaff;
+// $mikado-yellow: #ffc533ff;
+// $platinum: #e9e3e6ff;
+
+// /* SCSS HSL */
+// $charcoal: hsla(203, 37%, 22%, 1);
+// $red-ryb: hsla(5, 100%, 52%, 1);
+// $blood-red: hsla(1, 93%, 22%, 1);
+// $pale-silver: hsla(0, 7%, 75%, 1);
+// $mikado-yellow: hsla(43, 100%, 60%, 1);
+// $platinum: hsla(330, 12%, 90%, 1);
+
+// /* SCSS RGB */
+// $charcoal: rgba(35, 61, 77, 1);
+// $red-ryb: rgba(255, 34, 12, 1);
+// $blood-red: rgba(107, 5, 4, 1);
+// $pale-silver: rgba(195, 186, 186, 1);
+// $mikado-yellow: rgba(255, 197, 51, 1);
+// $platinum: rgba(233, 227, 230, 1);
+
+// /* SCSS Gradient */
+// $gradient-top: linear-gradient(0deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
+// $gradient-right: linear-gradient(90deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
+// $gradient-bottom: linear-gradient(180deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
+// $gradient-left: linear-gradient(270deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
+// $gradient-top-right: linear-gradient(45deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
+// $gradient-bottom-right: linear-gradient(135deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
+// $gradient-top-left: linear-gradient(225deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
+// $gradient-bottom-left: linear-gradient(315deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
+// $gradient-radial: radial-gradient(#233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
